--- a/pages/turnos.css
+++ b/pages/turnos.css
@@ -57,6 +57,7 @@
     color: #111827;
     border-radius: 0.25rem;
     text-decoration: none;
+    font-weight: bold;
 }
 
 .nav-item:hover {
@@ -123,5 +124,25 @@ button:hover {
     background-color: #1FFF62;
 }
 
+footer {
+    background-color: #0B6623;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    position: relative;
+    color:black;
+    font-family: Arial, sans-serif;
+    width: 100%;
+}
+footer a {
+    color: black;
+    text-decoration: none;
+    margin: 0 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+footer a:hover {
+    color: white;
+}
 
 
