--- a/home.css
+++ b/home.css
@@ -6,10 +6,6 @@
     border-radius: 10px;
 }
 
-.dark #nav {
-    background-color: #111827;
-}
-
 /* Contenedor principal */
 .nav-container {
     max-width: 1280px;
@@ -63,56 +59,74 @@
 }
 
 .nav-item:hover {
-    
     color: white;
 }
 
 
 
-#img{
+.carousel-container {
     position: relative;
-    margin: 12px auto;
-    background-image: url('/public/imagenes/asasd2.png');
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-    width: 85%;
-    height: 400px;
-    border-radius: 15px;
+    width: 90%;
+    max-width: 800px;
     overflow: hidden;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
-}
-/* Agregar una capa oscura encima de la imagen */
-#img::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); 
-    z-index: 1; /* Coloca la capa sobre la imagen */
+    margin:12PX auto;
+    border-radius: 10px;
 }
 
-#text-banner{
+.carousel {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+    transition: transform 0.5s ease-in-out;
+    width: 100%; /* Tres imágenes (100% cada una) */
 }
 
-#title{
-    margin-top: 140px;
-    font: bold 36px Arial;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-    color:white; 
+.slide {
+    position: relative;
+    width: 100%;
+    flex: 0 0 100%;
+}
+
+.slide img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    position: relative;
+    z-index: 1;
+}
+
+.text {
+    text-align: center;
+    position: absolute;
+    bottom: 130px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    background: rgba(0, 0, 0, 0.6);
+    font-size: 30px;
+    padding: 10px;
+    border-radius: 6px;
     z-index: 2;
 }
-#dir{
-    font: bold 20px Arial;
-    color: #ffcc00;
-    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-    z-index: 2;
+
+button {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+    z-index: 3;
+}
+
+#prev {
+    left: 10px;
+}
+
+#next {
+    right: 10px;
 }
 
 #section-3{
