--- a/turnos.css
+++ b/turnos.css
@@ -5,9 +5,6 @@
     border-radius: 10px;
 }
 
-.dark #nav {
-    background-color: #111827;
-}
 
 /* Contenedor principal */
 .nav-container {
@@ -65,12 +62,53 @@
     color: white;
 }
 
+#img{
+    position: relative;
+    margin: 12px auto;
+    background-image: url('/public/imagenes/asasd2.png');
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    width: 90%;
+    height: 400px;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+}
+/* Agregar una capa oscura encima de la imagen */
+#img::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 1; /* Coloca la capa sobre la imagen */
+}
+
+#text-banner{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+#title{
+    margin-top: 140px;
+    font: bold 36px Arial;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    color:white; 
+    z-index: 2;
+}
+
+
+
 #section{
     display: flex;
     justify-content: center;
-    
     align-items: center;
-    height: 100vh;
+    
 }
 
 
@@ -79,9 +117,9 @@
     display:block;
     justify-content: center;
     align-items: center;
-    width: 100%;             /* Ancho fijo para el formulario */
+    width: 100%;            
     height:auto;
-    margin: 20px auto;        /* Centrado horizontal dentro de su contenedor */
+    margin: 20px auto;        
     padding: 20px;
     background-color: #0B6623;
     border-radius: 8px;
@@ -103,7 +141,7 @@
 }
 
 #group input {
-    width: 90%;             /* El input ocupa todo el ancho del grupo */
+    width: 90%;            
     padding: 10px;
     margin: auto;
     border: 1px solid #ccc;
@@ -144,5 +182,3 @@ footer a {
 footer a:hover {
     color: white;
 }
-
-
